--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4",
     "uuid": "^9.0.1"
