--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
